AIHUDDLE-Demo/5-deploy-application/group2/gotmining-backendv2-dolly/dolly-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: dolly
  labels:
    app: dolly
    app.kubernetes.io/part-of: gotmining
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dolly
  template:
    metadata:
      labels:
        app: dolly
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: gpu
                    operator: Exists
      containers:
        - name: dolly
          image: 'quay.io/mdargatz/dollyv2:3b-nomodel'
          ports:
            - containerPort: 5000
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      #     volumeMounts:
      #     - mountPath: "/app/cache/.cache/huggingface/hub/"
      #       name:  dolly
      # volumes:
      # - name:  dolly
      #   persistentVolumeClaim:
      #     claimName: dollyv2
