AIHUDDLE-Demo/5-deploy-application/group2/gotmining-backendv2-dolly/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: dollyv2
  annotations:
    haproxy.router.openshift.io/cors-allow-origin: "https://gotmining-frontend.apps.science-cluster.sandbox2009.opentlc.com"
    haproxy.router.openshift.io/cors-allow-methods: "GET, OPTIONS"
    haproxy.router.openshift.io/cors-allow-headers: "Authorization, Content-Type"
    haproxy.router.openshift.io/timeout: 240s
  labels:
    app: dolly
spec:
  host: dollyv2-gotmining-backend-group2.apps.science-cluster.sandbox2009.opentlc.com
  to:
    kind: Service
    name: dolly
    weight: 100
  port:
    targetPort: 5000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
status:
  ingress:
    - host: >-
        dollyv2-gotmining-serverless.apps.science-cluster.sandbox2009.opentlc.com
